--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
     "@next/font": "13.4.3",
+    "@trendyol-js/react-carousel": "^3.0.2",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "i18next": "^22.5.0",
     "next": "13.4.3",
     "next-i18next": "^13.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1"
   }
 }
