--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-i18next": "^13.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.3.1"
+    "react-i18next": "^12.3.1",
+    "swiper": "^9.3.2"
   }
 }
